<resources>
    <string name="app_name">FlashMeToSignal</string>
    <string name="s_v_rit">Sévérité :</string>
    <string name="type">Type :</string>
    <string name="identifiant">Identifiant :</string>
    <string name="envoyer">Envoyer</string>
    <string name="d_scription">Déscription :</string>
    <string name="todo">TODO</string>
    <string name="desc">déscription</string>
    <string name="iden">indentifiant</string>

    <!-- ici les liens vers l'API -->
    <string name="demandes">http://212.227.3.231:8085/flashme2signal/demandes</string>
    <string name="demande">http://212.227.3.231:8085/flashme2signal/demande</string>
    <string name="materiels">http://212.227.3.231:8085/flashme2signal/materiel/</string>
</resources>