<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingTop="5dp"
    android:paddingRight="10dp"
    android:paddingBottom="5dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoUniv"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02"
        tools:srcCompat="@drawable/logouniv" />

    <TextView
        android:id="@+id/idDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/logoUniv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toEndOf="@+id/logoUniv"
        app:layout_constraintTop_toTopOf="@+id/logoUniv" />

    <TextView
        android:id="@+id/idTextSev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s_v_rit"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/logoUniv"
        app:layout_constraintTop_toBottomOf="@+id/logoUniv"
        app:layout_constraintVertical_bias="0.04" />

    <Spinner
        android:id="@+id/spinnerSev"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:entries="@array/severiteValue"
        android:minHeight="48dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/idDate"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/idTextSev"
        app:layout_constraintTop_toBottomOf="@+id/idTextSev"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/textType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/spinnerSev"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spinnerSev"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSev"
        app:layout_constraintVertical_bias="0.04" />

    <Spinner
        android:id="@+id/spinnerType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:entries="@array/typeValue"
        android:minHeight="48dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/spinnerSev"
        app:layout_constraintStart_toStartOf="@+id/textType"
        app:layout_constraintTop_toBottomOf="@+id/textType"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/textIdent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/identifiant"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/spinnerType"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spinnerType"
        app:layout_constraintTop_toBottomOf="@+id/spinnerType"
        app:layout_constraintVertical_bias="0.04" />

    <EditText
        android:id="@+id/idEditIdent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@color/grey"
        android:ems="10"
        android:hint="@string/iden"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/spinnerType"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textIdent"
        app:layout_constraintTop_toBottomOf="@+id/textIdent"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/textDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/d_scription"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/idEditIdent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/idEditIdent"
        app:layout_constraintTop_toBottomOf="@+id/idEditIdent"
        app:layout_constraintVertical_bias="0.04" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:autofillHints=""
        android:background="@color/grey"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/desc"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/boutonEnv"
        app:layout_constraintEnd_toEndOf="@+id/idEditIdent"
        app:layout_constraintStart_toStartOf="@+id/textDesc"
        app:layout_constraintTop_toBottomOf="@+id/textDesc" />

    <Button
        android:id="@+id/boutonEnv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/bleu"
        android:text="@string/envoyer"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>